frame/support/test/tests/pallet_ui/call_argument_invalid_bound_3.stderr
error[E0369]: binary operation `==` cannot be applied to type `&pallet::Bar`
  --> $DIR/call_argument_invalid_bound_3.rs:22:37
   |
22 |         fn foo(origin: OriginFor<T>, bar: Bar) -> DispatchResultWithPostInfo {
   |                                           ^^^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `&pallet::Bar`

error[E0277]: the trait bound `pallet::Bar: std::clone::Clone` is not satisfied
  --> $DIR/call_argument_invalid_bound_3.rs:22:37
   |
22 |         fn foo(origin: OriginFor<T>, bar: Bar) -> DispatchResultWithPostInfo {
   |                                           ^^^ the trait `std::clone::Clone` is not implemented for `pallet::Bar`
   |
   = note: required by `std::clone::Clone::clone`

error[E0277]: `pallet::Bar` doesn't implement `std::fmt::Debug`
  --> $DIR/call_argument_invalid_bound_3.rs:22:37
   |
22 |         fn foo(origin: OriginFor<T>, bar: Bar) -> DispatchResultWithPostInfo {
   |                                           ^^^ `pallet::Bar` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `pallet::Bar`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&pallet::Bar`
   = note: required for the cast to the object type `dyn std::fmt::Debug`
